<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >


    <RelativeLayout
        android:id="@+id/page_iphone_14___1_ek1"
        android:layout_width="429dp"
        android:layout_height="728dp"
        android:background="@color/lavender">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/facture_logo"
                android:layout_width="148dp"
                android:layout_height="44dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="134dp"
                android:text="@string/facture_logo_string"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/facture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="165dp"
                android:text="@string/facture_string"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

        </RelativeLayout>


        <RelativeLayout

            android:layout_width="200dp"
            android:layout_height="234dp"
            android:layout_marginLeft="90sp"
            android:layout_marginTop="196dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/cart_text_view"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/total_price_text_view"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="190dp"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="234dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="430dp">

            <TextView
                android:id="@+id/inputter_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inputter__string"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/uwinjije"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="@string/uwinjije_string"

                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/contact__"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/contact___string"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/contact_number"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:text="@string/_71388728_string"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/cher_client_nous_vous_remercions_pour_vos_achats_chez_nous_"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"

                android:text="@string/cher_client_nous_vous_remercions_pour_vos_achats_chez_nous__string"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/date_"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:text="@string/date__string"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/date_number"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="130dp"
                android:text="@string/_2023_07_76_string"
                android:textColor="@color/uwinjije_color"
                android:textSize="18sp"
                android:textStyle="italic" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="619dp"
            android:background="@color/black">

            <Button
                android:id="@+id/submit_sale_button"
                android:layout_width="94dp"
                android:layout_height="33dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="vector"
                android:src="@drawable/vector" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/group_ek2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="71dp"
            android:layout_marginTop="619dp"
            android:background="@color/black">

            <Button
                android:id="@+id/print_button"
                android:layout_width="94dp"
                android:layout_height="33dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="vector_ek3"
                 />


        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>